# boilerplate-auth-payment

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
boilerplate/accounts/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
boilerplate/accounts/migrations/: 0001_initial.py
boilerplate/boilerplate/: asgi.py  settings.py  urls.py  wsgi.py
boilerplate/payments/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
boilerplate/payments/migrations/: 0001_initial.py
boilerplate/products/: admin.py  models.py
payments/: models.py  views.py
products/: models.py
